add r to placeholde

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -15,7 +15,7 @@
                       required: true,
                       autofocus: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password", placeholde: 'New Password' } %>
+                      input_html: { autocomplete: "new-password", placeholder: 'New Password' } %>
           <%= f.input :password_confirmation,
                       label: false,
                       required: true,
