--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,17 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+// $red: #FD1015;
+// $blue: #0D6EFD;
+// $yellow: #FFC65A;
+// $orange: #E67E22;
+// $green: #1EDD88;
+// $gray: #0E0000;
+// $light-gray: #F4F4F4;
+$onyx: #353839;
+$navy-blue: #2D7DD2;
+$brick-red: #C83E4D;
+$floral-white: #FFFCF2;
+$pistachio: #A5C882;
+$honey-yellow: #F2AF29;
+$max-yellow: #F2FF49;
