--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
 @import "card_product";
+@import "carousel";
 @import "footer";
 @import "form_legend_clear";
 @import "navbar";
+@import "vignette";
