--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,16 +6,16 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $light-gray;
+$body-bg:                 $floral-white;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$body-color: $onyx;
+$primary:    $navy-blue;
+$success:    $pistachio;
+$info:       $honey-yellow;
+$danger:     $brick-red;
+$warning:    $max-yellow;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
