--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,19 +4,53 @@
     <div class="border"> Commande Client </div>
     <div class="border my-2"><strong>Commande Fournisseurs</strong></div>
   </div>
-  <div class="border flex-grow-1" style='height: 100%'>
-    <h1 class="text-center"><%= @order.order_lines.first.supplier.name %></h1>
-    <% @order.order_lines.each do |line| %>
-      <div class="card-product my-2">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-        <div class="card-product-infos flex-grow-1">
-          <h4>produit: <%= line.product.title %></h4>
-          <p>quantité <strong><%= line.quantity %></strong></p>
-        </div>
-        <div class="me-3">
-          <h2>Prix = <%= line.line_total_price %></h2>
+    <div class="border flex-grow-1">
+      <div>
+        <h1 class="text-center"><%= @order.order_lines.first.supplier.name %></h1>
+        <% @order.order_lines.each do |line| %>
+          <div class="card-product m-3 ">
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+            <div class="card-product-infos flex-grow-1">
+              <h4>produit: <%= line.product.title %></h4>
+              <div class='d-flex align-items-center'>
+                <p class='me-4'>quantité <strong><%= line.quantity %></strong></p>
+                <%= simple_form_for([@order, line], html: {class: 'd-flex'}) do |f| %>
+                  <%= f.input :quantity, label: false, input_html: {class: 'mt-3', style:'width:96px; height:32px'} %>
+                  <%= f.submit class: 'ms-3 mt-3', style:'width:168px; height:32px' %>
+                <% end %>
+              </div>
+            </div>
+            <div class="me-3">
+              <h2>Prix = <%= line.line_total_price %></h2>
+            </div>
+          </div>
+        <% end %>
+        <div class="text-center">
+          <%= link_to validate_path(@order, order: {status:'1'}), method: :patch, class: 'text-center' do %>
+            <i class="fa-solid fa-check"></i>
+          <% end %>
+          <span> Valider la commande </span>
+
+          <h1><%= @order.status %></h1>
         </div>
       </div>
-    <% end %>
+      <div class='d-flex justify-content-around mt-5'>
+        <div>
+          <h1 class="text-center">Produit du même fournisseur</h1>
+          <% @supplier.products.each do |product| %>
+            <div class="card-product my-2">
+              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <div class="card-product-infos flex-grow-1">
+                <h4>produit: <%= product.title %></h4>
+                <p>quantité <strong><%=  %></strong></p>
+              </div>
+              <div class="me-3">
+                <h2>Prix = <%= product.buying_price %></h2>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
