--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,8 +13,8 @@ $font-size-base: 1rem;
 $body-color: $onyx;
 $primary:    $navy-blue;
 $success:    $pistachio;
-$info:       $honey-yellow;
-$danger:     $brick-red;
+$info:       $brick-red;
+$danger:     $honey-yellow;
 $warning:    $max-yellow;
 
 // Buttons & inputs' radius
