--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,12 @@
   </div>
     <div class="border flex-grow-1 pt-4">
       <div>
-        <h1 class="text-center"><%= @order.order_lines.first.supplier.name %></h1>
+        <div class="d-flex justify-content-around align-items-center">
+          <h1 class="text-end"><%= @order.order_lines.first.supplier.name %></h1>
+          <%= link_to dashboard_path do %>
+            <p><i class="fa-sharp fa-solid fa-arrow-rotate-left text-end fs-3"></i></p>
+          <% end %>
+        </div>
         <% @order.order_lines.each do |line| %>
           <div class="card-product m-3 ">
             <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
