--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,30 +1,32 @@
 <div class="d-flex" >
   <div class="border" style='width: 350px; height: 650px'>
-    <div class="border my-2"> Produit </div>
-    <div class="border"> Commande Client </div>
-    <div class="border my-2"> Commande Fournisseurs </div>
+    <div class=" my-2"> Produit </div>
+    <div > Commande Client </div>
+    <div class="my-2"> Commande Fournisseurs </div>
   </div>
   <div class="border flex-grow-1" style='height: 650px'>
 
   <% @products.each do |product| %>
-    <li class="list-group-item">
-      <div class="card-product my-2">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-        <div class="card-product-infos">
-          <div style="font-size: 16px">
-            <%= product.title %>
-          </div>
-          <div style="font-size: 12px">
-            <%= product.description %>
-          </div>
-        </div>
-      <%= simple_form_for @order_line do |f| %>
-        <%= f.hidden_field :product_id, value: product.id %>
-        <%= f.input :quantity %>
-        <%= f.submit class: 'btn btn-primary' %>
+      <% if product.order_lines.last.order.planned_delivery_date < Date.today  %>
+        <li class="list-group-item">
+          <div class="card-product my-2">
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+            <div class="card-product-infos">
+              <div style="font-size: 16px">
+                <%= product.title %>
+              </div>
+              <div style="font-size: 12px">
+                <%= product.description %>
+              </div>
+            </div>
+          <%= simple_form_for @order_line do |f| %>
+            <%= f.hidden_field :product_id, value: product.id %>
+            <%= f.input :quantity %>
+            <%= f.submit class: 'btn btn-primary' %>
+          <% end %>
+        </li>
+        <% next product %>
       <% end %>
-    </li>
-
   <% end %>
     </div>
   </div>
