--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wagon <%= yield(:navbar_class) %>">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "/", class: "navbar-brand" do %>
+  <%= link_to "/", class: "navbar-brand ms-2" do %>
       <i class="fa-solid fa-truck-fast"></i>
   <% end %>
 
