--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,17 +1,18 @@
 <div class="d-flex" >
-  <div class="border" style='width: 350px;'>
-    <div class="border my-2"> Produit </div>
-    <div class="border"> Commande Client </div>
-    <div class="border my-2"><strong>Commande Fournisseurs</strong></div>
+  <div class="border d-flex flex-column " style='width: 350px;'>
+  <%= link_to 'Produit', dashboard_path, class: 'text-decoration-none link-page'  %>
+  <%= link_to 'Commande Client', '#', class: 'text-decoration-none link-page'  %>
+  <strong><%= link_to 'Commande Fournisseurs', orders_path, class: 'text-decoration-none link-page'   %></strong>
   </div>
-  <div class="border flex-grow-1" style='height: 100%'>
+
+  <div class="border flex-grow-1" style='height: 650px'>
   <% @orders.each do |order| %>
     <% if order.client.nil? %>
       <div class="card-product my-2">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-      <%= link_to order_path(order) do  %>
-        <div class="card-product-infos flex-grow-1">
-          <h4>Fournisseur: <%= order.order_lines.first.product.supplier.name %></h4>
+      <%= link_to order_path(order), class: 'text-decoration-none link-page' do  %>
+        <div class="card-product-infos flex-grow-1 ">
+          <h4>Fournisseur: <%= order.order_lines.last.product.supplier.name %></h4>
       <% end %>
           <p>nombre de ligne <strong><%= order.order_lines.count %></strong></p>
           <p>Receipt date: <%= order.planned_delivery_date %></p>
