--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -36,7 +36,7 @@
               </div>
               <div style="font-size: 12px">
                 <p><%= product.description %></p>
-                <p>Quantitée en stock: <%= product.quantity_in_stock %></p>
+                <p>Quantité en stock: <%= product.quantity_in_stock %></p>
               </div>
             </div>
           <%= simple_form_for @order_line do |f| %>
