fix navbar footer

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,6 +11,10 @@
     font-weight: bold;
     font-size: 45px;
   }
+  h2 {
+    color: white;
+    font-size: 45px;
+  }
   p {
     color: white;
     opacity: .8;
