--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,11 @@
 // Specific CSS for your home-page
-#three-blocks {
- padding: 20px;
+.fa-solid {
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  font-size: 45px;
+  padding: 10px;
+}
+
+.three-blocks {
+  margin: 20px;
 }
