--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,11 @@
-<div class="footer">
+<div class="footer fixed-bottom">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/matthieusp75/logistip"><i class="fab fa-github"></i></a>
+    <a href="https://www.instagram.com/lewagonfrance/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/lewagonfrance/"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.linkedin.com/school/le-wagon/"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    le Wagon Batch-886 Logistip made it 2022
+    Logistip-#886 - v1.0.1 - All rights reserved - 2022
   </div>
 </div>
