--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,14 +1,15 @@
-<div class="navbar-wagon <%= yield(:navbar_class) %>">
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "/", class: "navbar-brand" do %>
-      <i class="fa-solid fa-truck-fast"></i>
-  <% end %>
+<div class="navbar navbar-expand-sm fixed-top navbar-light">
+  <div class="container-fluid">
+    <%= link_to "/", class: "navbar-brand" do %>
+        <i class="fa-solid fa-truck-fast"></i>
+    <% end %>
+  </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Dashboard", "/orders", class: "nav-link" %>
+        <li class="nav-item active nav-width">
+          <%= link_to "Tableau de bord", "/orders", class: "nav-link" %>
         </li>
         <%# <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link"
