--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex" >
+<div class="d-flex" style='margin-top: 80px'>
   <div class="border d-flex flex-column " style='width: 350px;'>
     <strong><%= link_to 'Produit', dashboard_path, class: 'text-decoration-none link-page'  %></strong>
     <%= link_to 'Commande Client', '#', class: 'text-decoration-none link-page'  %>
