--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex" >
+<div class="d-flex" style='margin-top: 80px'>
   <div class="border d-flex flex-column " style='width: 350px;'>
   <%= link_to 'Produit', dashboard_path, class: 'text-decoration-none link-page'  %>
   <%= link_to 'Commande Client', '#', class: 'text-decoration-none link-page'  %>
