fix navbar pages devise

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,7 @@
 $onyx: #353839;
 $navy-blue: #2D7DD2;
 $brick-red: #C83E4D;
-$floral-white: #FFFCF2;
+$snow: #FFFBFC;
 $pistachio: #A5C882;
 $honey-yellow: #F2AF29;
 $max-yellow: #F2FF49;
