--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style='margin-top: 80px'>
   <div class="row">
     <div class="col-4 offset-4">
       <h2 class='text-center mt-3'>Sign up</h2>
