--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container" style='margin-top: 80px'>
   <div class="row">
     <div class="col-6 offset-3">
       <h2>Resend confirmation instructions</h2>
