--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style='margin-top: 80px'>
   <div class="row">
     <div class="col-6 offset-3">
       <h2>Change your password</h2>
