--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style='margin-top: 80px'>
   <div class="row">
     <div class="col-4 offset-4">
       <h2 class='taxt-center' >Edit <%= resource_name.to_s.humanize %></h2>
