--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,3 +38,22 @@
   font-size: 45px;
   padding: 10px;
 }
+
+.nav .nav-pills .nav-fill{
+  position: fixed-top;
+}
+
+.dash-button{
+  width: 256px;
+  justify-content: space-between;
+  margin: 64px;
+  border-radius: 10px;
+}
+
+.nav-link{
+  color: white;
+}
+
+#dashbutton{
+  width: 256px;
+}
