--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,9 +1,6 @@
-<div class="d-flex" style='margin-top: 80px'>
-  <div class="border d-flex flex-column " style='width: 350px;'>
-  <%= link_to 'Produit', dashboard_path, class: 'text-decoration-none link-page'  %>
-  <%= link_to 'Commande Client', '#', class: 'text-decoration-none link-page'  %>
-  <strong><%= link_to 'Commande Fournisseurs', orders_path, class: 'text-decoration-none link-page'   %></strong>
-  </div>
+<div class='dashboard-container'>
+
+ <%= render 'shared/nav_dashboard' %>
 
   <div class="border flex-grow-1" style='height: 650px'>
   <% @orders.each do |order| %>
