--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,9 +1,7 @@
-<div class="d-flex" style='margin-top: 80px'>
-  <div class="border d-flex flex-column " style='width: 350px;'>
-    <strong><%= link_to 'Produit', dashboard_path, class: 'text-decoration-none link-page'  %></strong>
-    <%= link_to 'Commande Client', '#', class: 'text-decoration-none link-page'  %>
-    <%= link_to 'Commande Fournisseurs', orders_path, class: 'text-decoration-none link-page'   %>
-  </div>
+<div class='dashboard-container'>
+
+ <%= render 'shared/nav_dashboard' %>
+
   <div class="border flex-grow-1" style='height: 650px'>
     <% @products.each do |product| %>
       <% if product.order_lines.count > 0 %>
@@ -22,7 +20,7 @@
             <%= simple_form_for @order_line do |f| %>
               <%= f.hidden_field :product_id, value: product.id %>
               <%= f.input :quantity %>
-              <%= f.submit class: 'btn btn-primary' %>
+              <%= f.submit class: 'btn btn-dark' %>
             <% end %>
           </li>
         <% end %>
@@ -42,7 +40,7 @@
           <%= simple_form_for @order_line do |f| %>
             <%= f.hidden_field :product_id, value: product.id %>
             <%= f.input :quantity %>
-            <%= f.submit class: 'btn btn-primary' %>
+            <%= f.submit class: 'btn btn-dark' %>
           <% end %>
         </li>
       <% end %>
