--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,9 +3,9 @@
 @import "avatar";
 @import "banner";
 @import "card_product";
+@import "card_order";
 @import "carousel";
 @import "footer";
 @import "form_legend_clear";
 @import "navbar";
 @import "sidebar";
-
