arragement pour mon écran :)

--- a/app/assets/stylesheets/components/_dashcategories.scss
+++ b/app/assets/stylesheets/components/_dashcategories.scss
@@ -6,7 +6,6 @@
 }
 
 .dashboard-container{
-  margin-top: 80px;
-  margin-left: 192px;
-  margin-right: 192px;
+  width:1200px;
+  margin: 80px auto;
 }
