--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,7 +3,7 @@
 
  <%= render 'shared/nav_dashboard' %>
 
-    <div class="border flex-grow-1 pt-4">
+    <div class="flex-grow-1 pt-4">
       <div>
         <div class="d-flex align-items-center">
           <%= link_to orders_path, class: 'text-decoration-none' do %>
@@ -14,14 +14,17 @@
         <% @order.order_lines.each do |line| %>
           <%= render partial: 'shared/card_order_line', locals: {line: line, order: @order}  %>
         <% end %>
+        <h5 class='text-end'><%= @order.total_price %>€</h5>
         <%= render partial: 'shared/order_status', locals: {order: @order} %>
       </div>
       <div class='d-flex justify-content-around mt-5'>
         <div>
+        <% if @order.status == 0 %>
           <h1 class="text-center">Produit du même fournisseur</h1>
-          <% @products.each do |product| %>
+          <% @other_products.each do |product| %>
             <%= render partial: 'shared/card_product', locals: {product: product}  %>
           <% end %>
+        <% end %>
         </div>
       </div>
     </div>
