--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -16,9 +16,14 @@
             <% end %>
         </div>
       <% end %>
+
+      <% if @missing_products.count == 0 %>
+        <h3 class='text-center'>Aucun produit à commander</h3>
         <div class="text-center mt-5">
           <%= link_to "Commandes fournisseur", orders_path, class: 'btn btn-dark'  %>
         </div>
+      <% end %>
+
     </div>
   </div>
 </div>
