--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,7 @@
  <div class="container flex-grow-1">
     <div class="row justify-content-center">
       <% @products.each do |product| %>
-        <% if (product.order_lines.count > 0 && product.order_lines.last.order.planned_delivery_date < Date.today) || product.order_lines.count.zero? %>
+        <% if (product.order_lines.count > 0 && product.order_lines.last.order.planned_delivery_date <= Date.today) || product.order_lines.count.zero? %>
           <div class="col-4">
             <div class="container">
               <li class="list-group-item">
