--- a/app/views/shared/_card_order.html.erb
+++ b/app/views/shared/_card_order.html.erb
@@ -1,5 +1,5 @@
 <div class="card-order mx-5 my-2">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <%= cl_image_tag order.order_lines.first.product.supplier.photo.key, height: 300, width: 400, crop: :fill %>
     <div class="card-order-infos flex-grow-1 mt-2 ">
       <div class="d-flex justify-content-between align-items-center">
         <%= link_to order_path(order), class: 'text-decoration-none link-page' do  %>
