--- a/app/views/shared/_card_order_line.html.erb
+++ b/app/views/shared/_card_order_line.html.erb
@@ -1,6 +1,6 @@
 <% if order.status == 0 %>
   <div class="card-order m-3 ">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <%= cl_image_tag product.photo.key, height: 300, width: 400, crop: :fill %>
     <div class="card-order-infos flex-grow-1">
       <h4><%= line.product.title %></h4>
       <div class='d-flex align-items-center'>
