--- a/app/views/shared/_card_order_line.html.erb
+++ b/app/views/shared/_card_order_line.html.erb
@@ -21,7 +21,7 @@
     <div class="card-order-infos flex-grow-1">
       <h4><%= line.product.title %></h4>
       <div class='d-flex align-items-center'>
-        <p class='me-4'>Quantité commandé <%= pluralize(line.quantity * line.product.quantity_per_case, 'pièce') %></p>
+        <p class='me-4'>Quantité commandée <%= pluralize(line.quantity * line.product.quantity_per_case, 'pièce') %></p>
       </div>
     </div>
     <div class="me-3 mb-3 align-self-end">
