--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,13 +13,14 @@
   }
   h2 {
     color: white;
-    font-size: 45px;
+    font-size: 40px;
+    font-weight: bolder;
   }
   p {
     color: white;
     opacity: .8;
-    font-size: 25px;
-    font-weight: lighter;
+    font-size: 30px;
+    font-weight: bold;
     margin-bottom: 30px;
   }
 }
