--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,9 +58,9 @@
   <div class="banner-content text-center demo">
     <h2>Pilotez vos stocks et boostez votre business grâce à Logistip </h2>
       <% if user_signed_in? %>
-        <%= link_to "Je veux une démo !", dashboard_path, class: "btn btn-warning"  %>
+        <%= link_to "Je veux une démo !", dashboard_path, class: "btn btn-warning demo-btn"  %>
       <% else %>
-        <%= link_to "Je veux une démo !", new_user_session_path, class: "btn btn-warning"  %>
+        <%= link_to "Je veux une démo !", new_user_session_path, class: "btn btn-warning demo-btn"  %>
       <% end %>
   </div>
 </div>
