--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,6 +4,7 @@
  <%= render 'shared/nav_dashboard' %>
 
  <div class="container">
+  <h2 class="text-center">Réapprovisionnez vos produits en rupture de stock</h2>
     <div class="row">
       <% @products.each do |product| %>
         <% if (product.order_lines.count > 0 && product.order_lines.last.order.planned_delivery_date <= Date.today) || product.order_lines.count.zero? %>
@@ -23,7 +24,6 @@
           <%= link_to "Commandes fournisseur", orders_path, class: 'btn btn-dark'  %>
         </div>
       <% end %>
-
     </div>
   </div>
 </div>
