--- a/app/views/shared/_card_product.html.erb
+++ b/app/views/shared/_card_product.html.erb
@@ -14,12 +14,14 @@
       <p><%= product.buying_price %>€/UVC - Soit <%= product.buying_price * product.quantity_per_case %>€ le colis</p>
       </div>
     </div>
-    <%= simple_form_for @order_line, html: {class: 'd-flex justify-content-center align-items-center ms-'} do |f| %>
+    <%# <div class='me-1'> %>
+    <%= simple_form_for @order_line, html: {class: 'd-flex justify-content-center align-items-center me-5'} do |f| %>
       <%= f.hidden_field :product_id, value: product.id %>
       <%= f.submit 'Précommander', class: 'btn btn-dark mx-2 p-1 ', style:'width:156px; height:32px' %>
       <%= f.input :quantity, label: false, type: 'number', input_html: {class: 'mt-3 quantity text-center',
                                                                         placeholder: "Minimum #{product.minimum_order_quantity} colis",
                                                                         min: product.minimum_order_quantity } %>
     <% end %>
+    <%# </div> %>
   </div>
 </div>
